--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
         "npm": ">=6.0.0"
     },
     "dependencies": {
+        "@graphql-tools/load-files": "^6.0.18",
+        "@graphql-tools/merge": "^6.0.18",
         "@graphql-tools/utils": "^8.6.13",
         "apollo-server": "^3.9.0",
         "apollo-server-express": "^3.9.0",
@@ -41,6 +43,7 @@
         "dotenv": "^16.0.1",
         "graphql": "^16.5.0",
         "graphql-import-node": "^0.0.5",
+        "graphql-merge-resolvers": "^1.1.16",
         "graphql-playground-middleware-express": "^1.7.23",
         "graphql-tools": "^4.0.8",
         "jsonwebtoken": "^8.5.1",
